2009-11-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPlatDecls.h:	Restore C++ friendliness to the
	tkPlatDecls.h header file, which we insist extensions #include to
	gain access to the Tk_*HWND*() routines.  [Bug 2886635].

2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* unix/Makefile.in: Partially reverted Don Porter's 2009-10-20
	commit. The OSX Cocoa code branch still needs tclInt.h and the
	internal headers, thus the TCL_PLATFORM directory. See
	tclMacOSXNotify.c for example.

2009-11-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFileFilter.c (TkFreeFileFilters): Simplify the code in
	this file by consolidating the deletion code together into a single
	function rather than scattering it over four.

2009-11-01  Joe Mistachkin  <joe@mistachkin.com>

	* win/tkWinButton.c: [Bug 1739613]: The default width being stored
	in TSD cannot be put into the process-wide options table.  This fix
	allocates storage for the default width from the heap and frees it
	using an exit handler.

2009-11-01  Joe Mistachkin  <joe@mistachkin.com>

	* doc/loadTk.n: Minor fix for htmlhelp target.

2009-11-01  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c, doc/ttk_widget.n: Uniform, extensible
	syntax for [$w identify] methods: [$w identify $component $x $y].  All
	ttk::* widgets support [$w identify element $x $y]; widgets with other
	identifiable parts may have additional subcommands.
	* generic/ttk/ttkNotebook.c, doc/ttk_notebook.n: Notebook widgets
	support [$nb identify tab].
	* generic/ttk/ttkPanedwindow.c, doc/ttk_panedwindow.n: Panedwindow
	widgets support [$w identify sash].  Older 2-argument form [$w
	identify $x $y] still supported, though it does different things
	depending on the widget.

2009-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinFont.c: [Bug 1825353]: This patch reverts a previous
	attempt to fix tiny fonts on Russian Windows. It fixes the issue by